# stopro

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.py
.ipynb_checkpoints/: documentation_and_examples-checkpoint.ipynb
anaconda_projects/db/: project_filebrowser.db
benchmarks/: colored_geometric_brownian_motion.py  colored_replicator.py  common.py  exponential_ornstein_uhlenbeck.py  geometric_brownian_motion.py  gillespie_replicator.py  integrated_ornstein_uhlenbeck.py  kimura_replicator.py  ornstein_uhlenbeck.py  run.py  white_replicator.py  wiener.py
examples/: ColoredGeometricBrownian.ipynb  ColoredStochasticReplicator.ipynb  CompetitiveLoktaVolterra.ipynb  ExponentialOrnsteinUhlenbeck.ipynb  GeometricBrownian.ipynb  GillespieReplicator.ipynb  IntegratedOrnsteinUhlenbeck.ipynb  KimuraReplicator.ipynb  MoranProcess.ipynb  OrnsteinUhlenbeck.ipynb  StochasticReplicator.ipynb  Untitled.ipynb  WhiteReplicator.ipynb  Wiener.ipynb  documentation_and_examples.ipynb  multiplicative_white_noise.ipynb
processes/: __init__.py  metadata.py  processes.py
src/stopro/: __init__.py  _utils.py  colored_geometric_brownian_motion.py  colored_replicator.py  competitive_lotka_volterra.py  exponential_ornstein_uhlenbeck.py  geometric_brownian_motion.py  gillespie_replicator.py  integrated_ornstein_uhlenbeck.py  kimura_replicator.py  metadata.py  moran.py  ornstein_uhlenbeck.py  white_replicator.py  wiener.py
src/stopro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stopro/: __init__.py  colored_geometric_brownian_motion.py  geometric_brownian_motion.py  gillespie_replicator.py  integrated_ornstein_uhlenbeck.py  kimura_replicator.py  metadata.py  stopro.py  white_replicator.py  wiener.py
tests/: GillespieReplicator.ipynb  SoftMaxGillespie.ipynb  Untitled-2.ipynb  test_api_shapes.py
