[build-system]
requires = ["setuptools>=69","setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "stopro"
dynamic = ["version"]
description = "Stochastic processes in Python"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Dirk Brockmann", email = "dirk.brockmann@tu-dresden.de" }]
maintainers = [{ name = "Dirk Brockmann", email = "dirk.brockmann@tu-dresden.de" }]
license = { text = "MIT" }

dependencies = [
  "numpy>=1.22",
  "scipy>=1.9",
]

keywords = ["stochastic-processes", "sde", "wiener", "ornstein-uhlenbeck"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/dirkbrockmann/stopro"
# Documentation = "https://..."

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[dependency-groups]
dev = [
  "pytest>=7",
  "build>=1.4.0",
  "twine>=6.2.0",
  "bumpver>=2025.1131",
]

examples = [
  "jupyter",
  "matplotlib",
  "palettable",
]


