[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[project]
name = "stopro"
version = "0.4.5"
description = "Stochastic processes in Python"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Dirk Brockmann", email = "dirk.brockmann@tu-dresden.de" }]
maintainers = [{ name = "Dirk Brockmann", email = "dirk.brockmann@tu-dresden.de" }]
license = { text = "MIT" }

dependencies = [
  "numpy>=1.22",
  "scipy>=1.9",
]

keywords = ["stochastic-processes", "sde", "wiener", "ornstein-uhlenbeck"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/dirkbrockmann/stopro"

[project.optional-dependencies]
examples = ["jupyter", "matplotlib", "palettable"]

[dependency-groups]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
