[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[project]
name = "stopro"
version = "0.5.0"
description = "Stochastic processes in Python"
readme = "README.md"

# Keep a sane upper bound to avoid future major/minor surprises.
# Adjust the lower bound if you truly need 3.9 support.
requires-python = ">=3.9,<=3.13"

authors = [{ name = "Dirk Brockmann", email = "dirk.brockmann@tu-dresden.de" }]
maintainers = [{ name = "Dirk Brockmann", email = "dirk.brockmann@tu-dresden.de" }]
license = { text = "MIT" }

# Leave intent (ranges) here; exact versions are pinned in uv.lock.
# Upper bounds guard against future major releases with breaking changes.
dependencies = [
  "numpy>=1.22,<3",
  "scipy>=1.9,<2",
]

keywords = ["stochastic-processes", "sde", "wiener", "ornstein-uhlenbeck"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/dirkbrockmann/stopro"

[project.optional-dependencies]
# Use jupyterlab explicitly since you run `jupyter lab` in the Makefile.
# Add a mild matplotlib floor to reduce surprising behavior changes.
examples = ["jupyterlab", "matplotlib>=3.7", "palettable"]
bench = ["tqdm>=4.66"]

[dependency-groups]
# Optional upper bound for stability; bump as needed.
dev = ["pytest>=7,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
